Fix logout link in Dashboard.html

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -3,7 +3,7 @@
  <div class="container">
      <h1>Welcome, {{usernaem}}</h1>
      <p>Welcome to your Dashboard</p>
-     <a href="" class="button-logout"/>
+     <a href="{{url_for('logout')}}" class="button-logout">Logout</a>
  </div>
 
 {% endblock %}
