Added layout and fonts to Stars page

--- a/SiteFolderExpansion/stars.html
+++ b/SiteFolderExpansion/stars.html
@@ -1,23 +1,73 @@
 <!doctype html>
 <head>
 
+
+
 <style>
 	.box1{
-	   width: 200px;
+	   width: 900px;
 	   height: 200px;
 	   background-color: gold; 
+	   border-radius: 50px;
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
+	   padding: 5px;
+	   font-family: Lucida Console;
+	}
+
+	.box1_inner{
+	   width: 100%;
+	   height: 100%;
+	   background-color: darkslateblue; 
+	   border-radius: 50px;
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
+
 	}
 
 	.box2{
-	   width: 200px;
+	   width: 900px;
 	   height: 200px;
 	   background-color: orange; 
+	   border-radius: 50px;
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
+	   padding: 5px;
+
+	}
+
+	.box2_inner{
+	   width: 100%;
+	   height: 100%;
+	   background-color: darkslateblue; 
+	   border-radius: 50px;
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
 	}
 
 	.box3{
-	   width: 200px;
+	   width: 900px;
 	   height: 200px;
 	   background-color: darkorange; 
+	   border-radius: 50px;
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
+	   padding: 5px; 
+	}
+	
+	.box3_inner{
+	   width: 100%;
+	   height: 100%;
+	   background-color: darkslateblue; 
+	   border-radius: 50px;
+	   display: flex;
+	   justify-content: center;
+	   align-items: center;
 	}
 
 
@@ -36,16 +86,19 @@
 
 	<div class="box1">
 		Constellation Box 1
+	  <div class="box1_inner">Box's inner box</div> 		
 
 	</div>	    
   
 	<div class="box2">
 		Constellation Box 2
+	  <div class="box2_inner">Interactive Constellation 2 Image
 
 	</div>
 
 	<div class="box3">
 		Constellation Box 3
+	  <div class="box3_inner">Interactive Constellation 3 Image
 
 	</div>
 
